k8sscripts/ingress-apikey.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fakeservice-ingress
  annotations:
    konghq.com/plugins: apikey-auth
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /foo
        pathType: ImplementationSpecific
        backend:
          service:
            name: fake-service
            port:
              number: 5000
